src/objects/Fault_Codes__c/Fault_Codes__c.object-meta.xml
<CustomObject>
    <label>Fault Codes</label>
    <nameField>
        <displayFormat>Fault Code - {0000}</displayFormat>
        <label>Fault Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fault Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>