src/objects/Fault_Codes__c/fields/FA_FV__c.field-meta.xml
<CustomField>
    <fullName>FA_FV__c</fullName>
    <label>FA / FV</label>
    <referenceTo>FA_FV_Analysis__c</referenceTo>
    <relationshipLabel>Fault Codes</relationshipLabel>
    <relationshipName>Fault_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>