src/objects/Fault_Codes__c/fields/PIC_Level_1__c.field-meta.xml
<CustomField>
    <fullName>PIC_Level_1__c</fullName>
    <inlineHelpText>Please enter the level 1 fault code for this FA / FV</inlineHelpText>
    <label>PIC Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>NTF</fullName>
            </value>
            <value>
                <fullName>Packaging, Labelling &amp; Transport</fullName>
            </value>
            <value>
                <fullName>Quality system</fullName>
            </value>
            <value>
                <fullName>Test &amp; burn-in</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>