src/objects/Fault_Codes__c/fields/PIC_Level_2__c.field-meta.xml
<CustomField>
    <fullName>PIC_Level_2__c</fullName>
    <inlineHelpText>Please select a picklist value from this picklist field.</inlineHelpText>
    <label>PIC Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Electronic Components</fullName>
            </value>
            <value>
                <fullName>APD</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Electric / Electronic Assemblies</fullName>
            </value>
            <value>
                <fullName>Feed-Through Hermetic</fullName>
            </value>
            <value>
                <fullName>IC - ASCII</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>Laser</fullName>
            </value>
            <value>
                <fullName>Laser BH</fullName>
            </value>
            <value>
                <fullName>Laser DFB</fullName>
            </value>
            <value>
                <fullName>Laser FP</fullName>
            </value>
            <value>
                <fullName>Laser VCSEL</fullName>
            </value>
            <value>
                <fullName>TIA</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>MPD</fullName>
            </value>
            <value>
                <fullName>Optical</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Passive Electronic Component</fullName>
            </value>
            <value>
                <fullName>Mechanical Stress</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Firmware</fullName>
            </value>
            <value>
                <fullName>FPGA HDL</fullName>
            </value>
            <value>
                <fullName>Manufacturing Process</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Assembly Workmanship</fullName>
            </value>
            <value>
                <fullName>Code Load</fullName>
            </value>
            <value>
                <fullName>Equipment / OOC</fullName>
            </value>
            <value>
                <fullName>Escaping Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>